--- a/agents-docs/content/docs/community/inkeep-community.mdx
+++ b/agents-docs/content/docs/community/inkeep-community.mdx
@@ -1,6 +1,7 @@
 ---
 title: Inkeep Community
 description: The Inkeep Community is a place where you can connect with other Inkeep users and get help with your Inkeep projects.
+icon: "LuUsers"
 ---
 
 From project spotlights to problem-solving and collaboration, our [Slack](https://join.slack.com/t/inkeepworkspace/shared_invite/zt-3cqkl5cup-rcxpLMP0nrjOuJqycC7kiQ) brings the Inkeep community together
