--- a/agents-docs/content/docs/quick-start.mdx
+++ b/agents-docs/content/docs/quick-start.mdx
@@ -1,6 +1,7 @@
 ---
 title: Quick Start
 description: Get started with Inkeep's multi-agent framework locally
+icon: "LuRocket"
 ---
 
 # Launch the Visual Builder
@@ -19,26 +20,31 @@ cp agents-manage-api/.env.example agents-manage-api/.env && cp agents-run-api/.e
 ```
 
 Add your `ANTHROPIC_API_KEY` to an `.env` file at `/agents-run-api/`
+
 ```
 ANTHROPIC_API_KEY=sk-ant-xyz789
 ```
 
 ### Step 3: Setup and install
+
 ```bash
 pnpm install
 ```
 
 ### Step 4: Initialize database
+
 ```bash
 pnpm --dir ./packages/agents-core db:push
 ```
 
 ### Step 5: Run the agent framework
+
 ```bash
 pnpm dev
 ```
 
 ### Step 6: Start building!
+
 Open `http://localhost:3000` in the browser and start building agents.
 
 # Push your first graph
@@ -60,10 +66,15 @@ cd examples
 inkeep push basic.graph.ts
 ```
 
-<Note>The graph will be pushed to whichever project is specified in the `/examples/inkeep.config.ts` file, which is set to the `default` project by default. Feel free to change it to your own project.</Note>
+<Note>
+  The graph will be pushed to whichever project is specified in the
+  `/examples/inkeep.config.ts` file, which is set to the `default` project by
+  default. Feel free to change it to your own project.
+</Note>
 
 ### Step 3: Observe the graph in the visual builder
-<img 
+
+<img
   src="/gifs/basic-graph.gif"
   alt="Basic graph"
   width="100%"
@@ -73,15 +84,18 @@ inkeep push basic.graph.ts
 # Set up live traces
 
 ### Step 1: Launch docker containers
+
 ```bash
 cd deploy/docker
 docker compose up -d
 ```
 
 ### Step 2: Fetch SigNoz API Key
+
 Open `http://localhost:3080` in the browser. Go to **Settings** → **Workspace Settings** → **API Keys** and copy the API key.
 
 ### Step 3: Configure environment variable
+
 Create a `.env` file at `/agents-manage-ui/` with the following variable:
 
 ```
@@ -101,7 +115,7 @@ Refresh the live traces panel on the right to see your agents in action.
 
 # Set up credentials
 
-### Step 1: Create .env file and generate encryption key 
+### Step 1: Create .env file and generate encryption key
 
 ```bash
 cp deploy/docker/.env.nango.example deploy/docker/.env && encryption_key=$(openssl rand -base64 32) && sed -i '' "s|REPLACE_WITH_BASE64_256BIT_ENCRYPTION_KEY|$encryption_key|" deploy/docker/.env && echo "Docker environment file created with auto-generated encryption key"
@@ -115,9 +129,11 @@ docker compose up -d
 ```
 
 ### Step 3: Get your Nango API key
+
 Open the Nango Dashboard: `http://localhost:3050` and navigate to **Environment Settings** → **API Keys** and copy the API key.
 
 ### Step 4: Configure environment variables
+
 Navigate back to the root directory and paste the below command. Enter your Nango API key when prompted:
 
 ```bash
