--- a/agents-docs/content/docs/talk-to-your-agents/mcp-server.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/mcp-server.mdx
@@ -1,6 +1,7 @@
 ---
 title: MCP Server
 description: Learn how to use the MCP server to talk to your agents
+icon: "LuServer"
 ---
 
 The MCP server allows you to talk to your agents through the Model Context Protocol.
@@ -17,9 +18,9 @@ The MCP server exposes one core tool:
 
 Sends a query to your agent graph's default agent. This tool:
 
-- **Name**: `send-query-to-agent`  
+- **Name**: `send-query-to-agent`
 - **Description**: Dynamically generated based on your agent graph's name and description
-- **Parameters**: 
+- **Parameters**:
   - `query` (string): The query to send to the agent
 - **Returns**: The agent's response as text content
 
@@ -27,8 +28,9 @@ Sends a query to your agent graph's default agent. This tool:
 When the MCP server is configured, Cursor will automatically discover this tool and you can use it by asking questions. The tool will route your query to the appropriate agent in your graph and return the response.
 
 The tool handles:
+
 - Message creation and conversation management
-- Agent execution with your configured tools and capabilities  
+- Agent execution with your configured tools and capabilities
 - Context resolution if your graph has context configuration
 - Error handling and response formatting
 
