--- a/agents-docs/content/docs/typescript-sdk/agent-configuration.mdx
+++ b/agents-docs/content/docs/typescript-sdk/agent-configuration.mdx
@@ -1,6 +1,7 @@
 ---
 title: Agent Configuration
 description: Learn how to configure your agents
+icon: "LuUser"
 ---
 
 Agents are the core building blocks of our framework, designed to be both powerful individual workers and collaborative team members in multi-agent systems. Through the framework's agent graph architecture, each agent can seamlessly delegate tasks, share context, and work together using structured data components.
@@ -10,7 +11,7 @@ Agents are the core building blocks of our framework, designed to be both powerf
 Every agent needs a unique identifier, and clear prompt that define its behavior:
 
 ```typescript
-import { agent } from './builder/index';
+import { agent } from "./builder/index";
 
 const supportAgent = agent({
   id: "customer-support",
@@ -39,23 +40,23 @@ const agent = agent({
       providerOptions: {
         temperature: 0.7,
         maxTokens: 2048,
-        timeout: 30000
-      }
+        timeout: 30000,
+      },
     },
     structuredOutput: {
       model: "openai/gpt-4.1-mini-2025-04-14", // For structured JSON output
       providerOptions: {
         temperature: 0.1,
-        maxTokens: 1024
-      }
+        maxTokens: 1024,
+      },
     },
     summarizer: {
       model: "openai/gpt-4.1-nano-2025-04-14", // For summaries
       providerOptions: {
         temperature: 0.5,
-        maxTokens: 1000
-      }
-    }
+        maxTokens: 1000,
+      },
+    },
   },
 
   // Optional - Tools Integration
@@ -114,18 +115,18 @@ const agent = agent({
 });
 ```
 
-| Parameter | Type | Required | Description |
-|-----------|------|----------|-------------|
-| `id` | string | Yes | Stable agent identifier used for consistency and persistence |
-| `name` | string | Yes | Human-readable name for the agent |
-| `description` | string | Yes | Brief description of the agent's purpose and capabilities |
-| `prompt` | string | Yes | Detailed behavior guidelines and system prompt for the agent |
-| `models` | object | No | AI model settings with separate settings for base, structuredOutput, and summarizer models |
-| `tools` | object | No | MCP tools that the agent can use. See [MCP Servers](/typescript-sdk/tools-and-mcp-servers) for details |
-| `dataComponents` | array | No | Structured output components for rich, interactive responses. See [Data Components](/typescript-sdk/data-components) for details |
-| `artifactComponents` | array | No | Components for handling tool or agent outputs. See [Artifact Components](/typescript-sdk/artifact-components) for details |
-| `canTransferTo` | function | No | Function returning array of agents this agent can transfer to. See [Transfer Relationships](/typescript-sdk/agent-relationships#transfer-relationships) for details |
-| `canDelegateTo` | function | No | Function returning array of agents this agent can delegate to. See [Delegation Relationships](/typescript-sdk/agent-relationships#delegation-relationships) for details |
+| Parameter            | Type     | Required | Description                                                                                                                                                             |
+| -------------------- | -------- | -------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `id`                 | string   | Yes      | Stable agent identifier used for consistency and persistence                                                                                                            |
+| `name`               | string   | Yes      | Human-readable name for the agent                                                                                                                                       |
+| `description`        | string   | Yes      | Brief description of the agent's purpose and capabilities                                                                                                               |
+| `prompt`             | string   | Yes      | Detailed behavior guidelines and system prompt for the agent                                                                                                            |
+| `models`             | object   | No       | AI model settings with separate settings for base, structuredOutput, and summarizer models                                                                              |
+| `tools`              | object   | No       | MCP tools that the agent can use. See [MCP Servers](/typescript-sdk/tools-and-mcp-servers) for details                                                                  |
+| `dataComponents`     | array    | No       | Structured output components for rich, interactive responses. See [Data Components](/typescript-sdk/data-components) for details                                        |
+| `artifactComponents` | array    | No       | Components for handling tool or agent outputs. See [Artifact Components](/typescript-sdk/artifact-components) for details                                               |
+| `canTransferTo`      | function | No       | Function returning array of agents this agent can transfer to. See [Transfer Relationships](/typescript-sdk/agent-relationships#transfer-relationships) for details     |
+| `canDelegateTo`      | function | No       | Function returning array of agents this agent can delegate to. See [Delegation Relationships](/typescript-sdk/agent-relationships#delegation-relationships) for details |
 
 ## Model Settings
 
@@ -168,16 +169,18 @@ models: {
 When no model settings are configured at any level (project, graph, or agent), the system uses these defaults:
 
 - **Default base model**: `anthropic/claude-4-sonnet-20250514`
-- **Default structured output model**: `openai/gpt-4.1-mini-2025-04-14`  
+- **Default structured output model**: `openai/gpt-4.1-mini-2025-04-14`
 - **Default summarizer model**: `openai/gpt-4.1-nano-2025-04-14`
 
 **Required API Keys**: For the system defaults to work properly, you need both:
+
 - `ANTHROPIC_API_KEY` (for the base model)
 - `OPENAI_API_KEY` (for structured output and summarizer models)
 
 ### Provider Options
 
 Each model settings can include `providerOptions` with provider-specific settings:
+
 - `temperature`: Response creativity (0.0-1.0)
 - `maxTokens`: Maximum response length
 - `timeout`: Request timeout in milliseconds (e.g., `30000` for 30 seconds)
@@ -194,10 +197,10 @@ Agents automatically receive any graph-level prompt configuration in addition to
 ```typescript
 // Graph-level prompt that gets added to all agents
 const graph = agentGraph({
-  id: 'support-graph',
+  id: "support-graph",
   graphPrompt: `You work for Acme Corp. Always be professional and helpful. 
 Follow company policies and escalate complex issues appropriately.`,
-  agents: () => [supportAgent, escalationAgent]
+  agents: () => [supportAgent, escalationAgent],
 });
 ```
 
