--- a/agents-docs/content/docs/typescript-sdk/credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials.mdx
@@ -1,6 +1,7 @@
 ---
 title: Credentials
 description: The credentials are a mechanism for securely storing and retrieving credentials for mcp servers.
+icon: "LuKey"
 ---
 
 Securely store and retrieve authentication credentials for MCP servers.
@@ -23,25 +24,23 @@ import { credential } from "agent-sdk";
 import { CredentialStoreType } from "agent-sdk";
 
 const inkeepApiKeyCredential = credential({
-  id: 'inkeep-api-key',
+  id: "inkeep-api-key",
   type: CredentialStoreType.memory,
-  credentialStoreId: 'memory-default',
+  credentialStoreId: "memory-default",
   retrievalParams: {
-    key: 'INKEEP_API_KEY',
+    key: "INKEEP_API_KEY",
   },
 });
-
 
 const inkeepAnalyticsTool = mcpTool({
   id: "inkeep-analytics",
   tenantId: "your-tenant",
   name: "inkeep_analytics",
   description: "Get the latest stats from the Inkeep Analytics dashboard",
-  serverUrl:
-    "https://analytics.inkeep.com/mcp",
+  serverUrl: "https://analytics.inkeep.com/mcp",
   credentialReference: inkeepApiKeyCredential, // Reference to stored credentials
   transport: {
-    type: MCPTransportType.streamableHttp
+    type: MCPTransportType.streamableHttp,
   },
 });
 ```
