--- a/agents-docs/content/docs/visual-builder/graphs.mdx
+++ b/agents-docs/content/docs/visual-builder/graphs.mdx
@@ -1,6 +1,7 @@
 ---
 title: Graphs
 description: Graphs define the relationships between agents and tools.
+icon: "LuSpline"
 ---
 
 ## Creating your first agent
@@ -11,31 +12,34 @@ description: Graphs define the relationships between agents and tools.
 
 2. After you create a new graph, it will start with a default agent. Add prompt to the agent, which is a mandatory field.
 
-<Note>To delete an agent, click on the agent box and then hit the backspace key.</Note>
+<Note>
+  To delete an agent, click on the agent box and then hit the backspace key.
+</Note>
 
 The following are configurable options for the agent through the Visual Builder:
 
-
-| Parameter | Type | Required | Description |
-|-----------|------|----------|-------------|
-| `name` | string | Yes | Human-readable name for the agent |
-| `description` | string | No | Brief description of the agent's purpose and capabilities |
-| `prompt` | string | Yes | Detailed behavior guidelines and system prompt for the agent |
-| `model` | string | No | AI model identifier (e.g., "anthropic/claude-4-sonnet-20250514") Choose a model that you prefer |
-| `providerOptions` | object | No | Model-specific configuration options (temperature, maxTokens, etc.) |
-| `Data components` | object | No | Data components that the agent can use. See [Data Components](/visual-builder/data-components) for details |
-| `Artifact components` | array | No | Artifact components that the agent can use. See [Artifact Components](/visual-builder/artifact-components) for details |
+| Parameter             | Type   | Required | Description                                                                                                            |
+| --------------------- | ------ | -------- | ---------------------------------------------------------------------------------------------------------------------- |
+| `name`                | string | Yes      | Human-readable name for the agent                                                                                      |
+| `description`         | string | No       | Brief description of the agent's purpose and capabilities                                                              |
+| `prompt`              | string | Yes      | Detailed behavior guidelines and system prompt for the agent                                                           |
+| `model`               | string | No       | AI model identifier (e.g., "anthropic/claude-4-sonnet-20250514") Choose a model that you prefer                        |
+| `providerOptions`     | object | No       | Model-specific configuration options (temperature, maxTokens, etc.)                                                    |
+| `Data components`     | object | No       | Data components that the agent can use. See [Data Components](/visual-builder/data-components) for details             |
+| `Artifact components` | array  | No       | Artifact components that the agent can use. See [Artifact Components](/visual-builder/artifact-components) for details |
 
 ### Graph Prompt
 
 You can configure a graph-level prompt that gets automatically added to all agents in your graph. This provides consistent context and behavior guidelines across your entire agent network.
 
 **To add a graph prompt:**
+
 1. Click on the graph settings/configuration area
 2. Add your graph prompt in the "Graph Prompt" field
 3. This prompt will be injected into each agent's system prompt
 
 **Example uses:**
+
 - Company-wide policies and tone guidelines
 - Domain-specific context that applies to all agents
 - Consistent behavior rules across the agent network
@@ -58,13 +62,16 @@ To connect the tool to the agent, click on connector at the top of the MCP tool 
 
 <Video src="/videos/add-tool-vb.mp4" />
 
-<Note>To delete a tool, click on the tool box and then hit the backspace key.</Note>
+<Note>
+  To delete a tool, click on the tool box and then hit the backspace key.
+</Note>
 
 ## Adding agent sub-agents
 
 Sub-agents are specialized agents that handle specific tasks within your main agent's workflow. They allow you to delegate focused responsibilities to separate agents with their own prompt and capabilities.
 
 To add a sub-agent:
+
 1. Drag and drop an agent box from the toolbar into the graph
 2. Configure the sub-agent with its own prompt and settings
 3. Connect it to the parent agent by clicking the connector at the top of the sub-agent box and dragging it to the main agent
@@ -81,7 +88,7 @@ Then, add the data component to your agent by clicking on the agent box, and the
 
 ## Adding artifact components
 
-To create artifact components, see the [Artifact Components](/visual-builder/artifact-components) page for details. 
+To create artifact components, see the [Artifact Components](/visual-builder/artifact-components) page for details.
 
 Add the artifact component to your agent by clicking on the agent box in the graph, then selecting which artifact components you want to add.
 
