--- a/agents-docs/content/docs/visual-builder/mcp-servers.mdx
+++ b/agents-docs/content/docs/visual-builder/mcp-servers.mdx
@@ -1,6 +1,7 @@
 ---
 title: MCP Servers
 description: Create MCP servers that agents can use to access external services.
+icon: "LuServer"
 ---
 
 MCP servers provide tools that your agents can use to interact with external APIs and services. Once created, these servers are automatically synced to discover available tools, which can then be added to your agent graphs.
@@ -11,17 +12,17 @@ MCP servers provide tools that your agents can use to interact with external API
 
 2. Fill in the required server details:
 
-| Field | Description |
-|-------|-------------|
-| `Name` | Server name |
-| `URL` | Endpoint URL of a remote MCP server |
-| `Transport Type` | Streamable HTTP or SSE protocol |
+| Field            | Description                         |
+| ---------------- | ----------------------------------- |
+| `Name`           | Server name                         |
+| `URL`            | Endpoint URL of a remote MCP server |
+| `Transport Type` | Streamable HTTP or SSE protocol     |
 
 3. Optionally, configure additional settings:
 
-| Field | Description |
-|-------|-------------|
-| `Image URL` | Custom icon for the server (URL or base64 data URL) |
+| Field        | Description                                                                                                                                                                                                                                            |
+| ------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| `Image URL`  | Custom icon for the server (URL or base64 data URL)                                                                                                                                                                                                    |
 | `Credential` | Authentication credential if the server requires it. Choose from existing credentials, or leave blank and add a credential later. For OAuth 2.1/PKCE flows, leave blank and use the `Click to Login` button in the server details page to authenticate |
 
 4. Click "Create" to create the server.
@@ -41,10 +42,19 @@ After creating an MCP server, you can view its details:
   src="/images/mcp-server-healthy-status.png"
   alt="MCP server healthy status"
   width="60%"
-  style={{ borderRadius: "10px", border: "1px solid #e1e5e9", display: "block", margin: "0 auto" }}
+  style={{
+    borderRadius: "10px",
+    border: "1px solid #e1e5e9",
+    display: "block",
+    margin: "0 auto",
+  }}
 />
 
-<Note>Tool discovery requires a successful connection to the MCP server. If the server shows "Click to Login" in the status, use the button to initiate the authentication process.</Note>
+<Note>
+  Tool discovery requires a successful connection to the MCP server. If the
+  server shows "Click to Login" in the status, use the button to initiate the
+  authentication process.
+</Note>
 
 ## Editing server settings
 
@@ -58,7 +68,12 @@ To modify an existing MCP server:
   src="/images/mcp-server-edit-form.png"
   alt="MCP server healthy status"
   width="60%"
-  style={{ borderRadius: "10px", border: "1px solid #e1e5e9", display: "block", margin: "0 auto" }}
+  style={{
+    borderRadius: "10px",
+    border: "1px solid #e1e5e9",
+    display: "block",
+    margin: "0 auto",
+  }}
 />
 
 ## Authentication setup
@@ -66,6 +81,7 @@ To modify an existing MCP server:
 If your MCP server requires authentication, you have two options: either use the **"Click to Login"** button to authenticate or manually create a credential to use with the MCP server.
 
 ### OAuth 2.1/PKCE authentication
+
 1. Create your MCP server without selecting a credential
 2. Go to the server details page and click the **"Click to Login"** button
 3. Complete the OAuth authentication flow in your browser
@@ -75,30 +91,34 @@ If your MCP server requires authentication, you have two options: either use the
   src="/images/mcp-server-click-to-login.png"
   alt="MCP server click to login"
   width="60%"
-  style={{ borderRadius: "10px", border: "1px solid #e1e5e9", display: "block", margin: "0 auto" }}
+  style={{
+    borderRadius: "10px",
+    border: "1px solid #e1e5e9",
+    display: "block",
+    margin: "0 auto",
+  }}
 />
 
 #### Popular MCP servers with OAuth 2.1/PKCE support
 
-| Name | URL |
-|------|-----|
+| Name                                                                                                             | URL                              |
+| ---------------------------------------------------------------------------------------------------------------- | -------------------------------- |
 | [Atlassian (SSE)](https://support.atlassian.com/rovo/docs/getting-started-with-the-atlassian-remote-mcp-server/) | https://mcp.atlassian.com/v1/sse |
-| [Canva](https://www.canva.dev/docs/connect/canva-mcp-server-setup/) | https://mcp.canva.com/mcp |
-| [Hugging Face](https://huggingface.co/mcp) | https://huggingface.co/mcp?login |
-| [Intercom](https://developers.intercom.com/docs/guides/mcp) | https://mcp.intercom.com/mcp |
-| [Linear](https://linear.app/docs/mcp) | https://mcp.linear.app/mcp |
-| [Neon](https://neon.com/docs/ai/neon-mcp-server) | https://mcp.neon.tech/mcp |
-| [Notion](https://developers.notion.com/docs/get-started-with-mcp) | https://mcp.notion.com/mcp |
-| [Prisma](https://www.prisma.io/docs/postgres/integrations/mcp-server#remote-mcp-server) | https://mcp.prisma.io/mcp |
-| [Sentry](https://docs.sentry.io/product/sentry-mcp/) | https://mcp.sentry.dev/mcp |
-| [Vercel](https://vercel.com/docs/mcp/vercel-mcp) | https://mcp.vercel.com |
-
+| [Canva](https://www.canva.dev/docs/connect/canva-mcp-server-setup/)                                              | https://mcp.canva.com/mcp        |
+| [Hugging Face](https://huggingface.co/mcp)                                                                       | https://huggingface.co/mcp?login |
+| [Intercom](https://developers.intercom.com/docs/guides/mcp)                                                      | https://mcp.intercom.com/mcp     |
+| [Linear](https://linear.app/docs/mcp)                                                                            | https://mcp.linear.app/mcp       |
+| [Neon](https://neon.com/docs/ai/neon-mcp-server)                                                                 | https://mcp.neon.tech/mcp        |
+| [Notion](https://developers.notion.com/docs/get-started-with-mcp)                                                | https://mcp.notion.com/mcp       |
+| [Prisma](https://www.prisma.io/docs/postgres/integrations/mcp-server#remote-mcp-server)                          | https://mcp.prisma.io/mcp        |
+| [Sentry](https://docs.sentry.io/product/sentry-mcp/)                                                             | https://mcp.sentry.dev/mcp       |
+| [Vercel](https://vercel.com/docs/mcp/vercel-mcp)                                                                 | https://mcp.vercel.com           |
 
 ### Manual credential setup
+
 1. Create a credential in the [Credentials](/visual-builder/credentials) section. The credential can be API Key, Bearer Token, Basic, OAuth 2.0, etc.
 2. When creating or editing your MCP server, select the credential from the dropdown
 3. The credential will be automatically used when connecting to the server
-
 
 ## Finding more remote MCP servers
 
@@ -107,7 +127,6 @@ For additional remote MCP servers you can connect to:
 - **[Anthropic's Remote MCP Servers](https://docs.anthropic.com/en/docs/agents-and-tools/remote-mcp-servers)** - Official documentation with curated third-party remote servers
 - **[Awesome Remote MCP Servers](https://github.com/jaw9c/awesome-remote-mcp-servers)** - Community-curated list of high-quality remote MCP servers
 
-
 ## Using stdio-based MCP servers
 
 The Visual Builder requires **Streamable HTTP or SSE transport** to connect to MCP servers. If you have an MCP server that runs in **stdio mode** locally, you can use the following setup to connect to it.
@@ -115,7 +134,7 @@ The Visual Builder requires **Streamable HTTP or SSE transport** to connect to M
 ### Setup outline
 
 1. **Deploy your stdio -> Streamable HTTP/SSE bridge** (locally or cloud)
-2. **Set environment variables** (API tokens, etc.)  
+2. **Set environment variables** (API tokens, etc.)
 3. **Verify it's running** (i.e. on port `4000`, `4001`, etc.)
 4. **Add to Visual Builder**:
    - **URL**: `http://localhost:4000/mcp` (or your server URL)
@@ -126,13 +145,14 @@ The Visual Builder requires **Streamable HTTP or SSE transport** to connect to M
 1. Get familiar with [mcp-proxy](https://github.com/sparfenyuk/mcp-proxy) - proxy for MCP servers that use stdio transport
 2. [Supabase MCP server](https://github.com/supabase-community/supabase-mcp)
 3. Run the server locally:
+
 ```bash
 SUPABASE_ACCESS_TOKEN=YOUR_SUPABASE_ACCESS_TOKEN mcp-proxy --port 4444 --shell "npx -y @supabase/mcp-server-supabase@latest --read-only"
 ```
+
 4. Add to Visual Builder with the following settings:
    - **URL**: `http://localhost:4444/mcp`
    - **Transport Type**: `Streamable HTTP`
-
 
 ## Adding servers to graphs
 
@@ -147,7 +167,12 @@ Once you have created an MCP server, you can add it to your graphs:
   src="/images/mcp-server-add-to-graph.png"
   alt="MCP server add to graph"
   width="60%"
-  style={{ borderRadius: "10px", border: "1px solid #e1e5e9", display: "block", margin: "0 auto" }}
+  style={{
+    borderRadius: "10px",
+    border: "1px solid #e1e5e9",
+    display: "block",
+    margin: "0 auto",
+  }}
 />
 
 For detailed instructions on working with MCP servers in graphs, see the [Graphs](/visual-builder/graphs#adding-tools) page.
