--- a/agents-docs/content/docs/community/contributing/overview.mdx
+++ b/agents-docs/content/docs/community/contributing/overview.mdx
@@ -1,6 +1,7 @@
 ---
 title: Overview
 description: How to contribute to the Inkeep Agent Framework
+icon: "LuGitPullRequest"
 ---
 
 # Contributing to the Inkeep Agent Framework
@@ -44,16 +45,19 @@ The pre-commit hook runs the following checks before allowing a commit:
 While we recommend running all checks, there are legitimate cases where you might need to bypass them:
 
 **Skip typecheck only (tests still run):**
+
 ```bash
 SKIP_TYPECHECK=1 git commit -m "WIP: debugging issue"
 ```
 
 **Skip all hooks (use sparingly):**
+
 ```bash
 git commit --no-verify -m "emergency: hotfix for production"
 ```
 
 > **Note:** Use these bypass mechanisms sparingly. They're intended for:
+>
 > - Work-in-progress commits that you'll fix before pushing
 > - Emergency fixes where speed is critical
 > - Commits that only touch non-code files (though hooks are smart enough to handle this)
@@ -63,6 +67,7 @@ git commit --no-verify -m "emergency: hotfix for production"
 #### Type Checking
 
 Run type checking across all packages:
+
 ```bash
 pnpm typecheck
 ```
@@ -70,11 +75,13 @@ pnpm typecheck
 #### Linting
 
 Run the linter:
+
 ```bash
 pnpm lint
 ```
 
 Format code automatically:
+
 ```bash
 pnpm format
 ```
@@ -82,6 +89,7 @@ pnpm format
 #### Testing
 
 Run tests:
+
 ```bash
 pnpm test              # Run all tests
 pnpm test:watch        # Run tests in watch mode
@@ -91,6 +99,7 @@ pnpm test:coverage     # Run tests with coverage report
 ### Building
 
 Build all packages:
+
 ```bash
 pnpm build
 ```
@@ -98,6 +107,7 @@ pnpm build
 ### Development Server
 
 Start the development server:
+
 ```bash
 cd inkeep-chat
 pnpm dev
@@ -125,6 +135,7 @@ type(scope): description
 ```
 
 Types:
+
 - `feat`: New feature
 - `fix`: Bug fix
 - `docs`: Documentation changes
@@ -163,6 +174,7 @@ These checks must pass before a PR can be merged. The same checks run in pre-com
 ## Questions?
 
 If you have questions about contributing, please:
+
 1. Check existing issues and discussions
 2. Open a new issue if your question isn't addressed
 3. Reach out to the maintainers
