--- a/agents-docs/content/docs/community/license.mdx
+++ b/agents-docs/content/docs/community/license.mdx
@@ -1,6 +1,7 @@
 ---
 title: License
 description: License for the Inkeep Agent Framework
+icon: "LuFileText"
 ---
 
 The Inkeep Agent Framework is licensed under the **Elastic License 2.0** ([ELv2](https://www.elastic.co/licensing/elastic-license)) subject to **Inkeep's Supplemental Terms** ([SUPPLEMENTAL_TERMS.md](https://github.com/inkeep/agents/blob/main/SUPPLEMENTAL_TERMS.md)). This is a source-available license that allows broad usage while protecting against certain competitive uses.
