--- a/agents-docs/content/docs/oss-enterprise-comparison.mdx
+++ b/agents-docs/content/docs/oss-enterprise-comparison.mdx
@@ -3,11 +3,13 @@ title: Open Source and Cloud Comparison
 sidebarTitle: OSS vs Cloud
 description: Overview of what's available in the Open Source Framework and our Enterprise and Cloud Offerings
 keywords: open source ai agents, enterprise ai agents, cloud agents, feature comparison, pricing
+icon: "LuScale"
 ---
 
 ## Overview
 
 There are two options for how to build with Inkeep today:
+
 - **Open Source (Self-hosted)**: Free, community-supported version with core framework features
 - **Enterprise (Cloud or Self-hosted)**: Fully managed platform with out-of-box agents for common scenarios, advanced features, and dedicated support
 
@@ -44,95 +46,95 @@ With either option you can create agent-powered assistants, support bots, copilo
 
 ### Building Agents
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
-| No-Code Visual Builder | ✅ | ✅ |
-| Agent Developer SDK (TypeScript) | ✅ | ✅ |
+| Feature                          | Open Source | Enterprise |
+| -------------------------------- | :---------: | :--------: |
+| No-Code Visual Builder           |     ✅      |     ✅     |
+| Agent Developer SDK (TypeScript) |     ✅      |     ✅     |
 
 ### Core Framework
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
-| Take actions on any MCP Server, App, or API | ✅ | ✅ |
-| Multi-agent Architecture | ✅ | ✅ |
-| Agent Credential and Permissions Management | ✅ | ✅ |
-| Agent Traces available in UI and OTEL | ✅ | ✅ |
-| Talk to Agents via A2A, MCP, and Vercel AI SDK formats | ✅ | ✅ |
+| Feature                                                | Open Source | Enterprise |
+| ------------------------------------------------------ | :---------: | :--------: |
+| Take actions on any MCP Server, App, or API            |     ✅      |     ✅     |
+| Multi-agent Architecture                               |     ✅      |     ✅     |
+| Agent Credential and Permissions Management            |     ✅      |     ✅     |
+| Agent Traces available in UI and OTEL                  |     ✅      |     ✅     |
+| Talk to Agents via A2A, MCP, and Vercel AI SDK formats |     ✅      |     ✅     |
 
 ### Talk to Your Agents (Out of the Box)
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
-| With Claude, ChatGPT, and Cursor | ✅ | ✅ |
-| With out-of-box Slack and Discord apps | — | ✅ |
-| With out-of-box Zendesk, Salesforce, and support integrations | — | ✅ |
+| Feature                                                       | Open Source | Enterprise |
+| ------------------------------------------------------------- | :---------: | :--------: |
+| With Claude, ChatGPT, and Cursor                              |     ✅      |     ✅     |
+| With out-of-box Slack and Discord apps                        |      —      |     ✅     |
+| With out-of-box Zendesk, Salesforce, and support integrations |      —      |     ✅     |
 
 ### Building Agent UIs
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
-| Agent Messages with custom UIs (forms, cards, etc.) | ✅ | ✅ |
-| Custom UIs using Vercel AI SDK format | ✅ | ✅ |
-| Out-of-box Chat Components (React) | ✅ | ✅ |
-| Out-of-box Chat Components (JavaScript) | — | ✅ |
+| Feature                                             | Open Source | Enterprise |
+| --------------------------------------------------- | :---------: | :--------: |
+| Agent Messages with custom UIs (forms, cards, etc.) |     ✅      |     ✅     |
+| Custom UIs using Vercel AI SDK format               |     ✅      |     ✅     |
+| Out-of-box Chat Components (React)                  |     ✅      |     ✅     |
+| Out-of-box Chat Components (JavaScript)             |      —      |     ✅     |
 
 ### Data Connectors
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
-| Real-time fetch from databases, APIs, and the web | ✅ | ✅ |
-| Automated Ingestion of public sources (docs, help center, etc.) | — | ✅ |
-| Automated Ingestion of private sources (Notion, Confluence, etc.) | — | ✅ |
-| Optimized Retrieval and Search (Managed RAG) | — | ✅ |
+| Feature                                                           | Open Source | Enterprise |
+| ----------------------------------------------------------------- | :---------: | :--------: |
+| Real-time fetch from databases, APIs, and the web                 |     ✅      |     ✅     |
+| Automated Ingestion of public sources (docs, help center, etc.)   |      —      |     ✅     |
+| Automated Ingestion of private sources (Notion, Confluence, etc.) |      —      |     ✅     |
+| Optimized Retrieval and Search (Managed RAG)                      |      —      |     ✅     |
 
 ### Insights & Analytics
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
-| AI Reports on Knowledge Gaps | — | ✅ |
-| AI Reports on Product Feature Gaps | — | ✅ |
-| Intelligent Audits for Hallucinations, Accuracy and Performance | — | ✅ |
+| Feature                                                         | Open Source | Enterprise |
+| --------------------------------------------------------------- | :---------: | :--------: |
+| AI Reports on Knowledge Gaps                                    |      —      |     ✅     |
+| AI Reports on Product Feature Gaps                              |      —      |     ✅     |
+| Intelligent Audits for Hallucinations, Accuracy and Performance |      —      |     ✅     |
 
 ### Managed, Optimized Agents
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
-| AI Product Expert - Knows everything about product | — | ✅ |
-| AI Support Copilot - Collaborates with your support team | — | ✅ |
-| AI Docs Writer - Updates docs from support tickets or product updates | — | ✅ |
-| AI Marketing Writer - Analyzes user questions and creates relevant blog posts | — | ✅ |
+| Feature                                                                       | Open Source | Enterprise |
+| ----------------------------------------------------------------------------- | :---------: | :--------: |
+| AI Product Expert - Knows everything about product                            |      —      |     ✅     |
+| AI Support Copilot - Collaborates with your support team                      |      —      |     ✅     |
+| AI Docs Writer - Updates docs from support tickets or product updates         |      —      |     ✅     |
+| AI Marketing Writer - Analyzes user questions and creates relevant blog posts |      —      |     ✅     |
 
 ### Authentication and Authorization
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
-| Single Sign-on | Bring your own | ✅ |
-| Role-Based Access Control | Bring your own | ✅ |
-| Audit Logs | Bring your own | ✅ |
+| Feature                   |  Open Source   | Enterprise |
+| ------------------------- | :------------: | :--------: |
+| Single Sign-on            | Bring your own |     ✅     |
+| Role-Based Access Control | Bring your own |     ✅     |
+| Audit Logs                | Bring your own |     ✅     |
 
 ### Security
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
-| PII Removal | — | ✅ |
-| Uptime and Support SLAs | — | ✅ |
-| SOC II Type II and Pentest Reports | — | ✅ |
-| GDPR, HIPAA, DPA, and Infosec Reviews | — | ✅ |
+| Feature                               | Open Source | Enterprise |
+| ------------------------------------- | :---------: | :--------: |
+| PII Removal                           |      —      |     ✅     |
+| Uptime and Support SLAs               |      —      |     ✅     |
+| SOC II Type II and Pentest Reports    |      —      |     ✅     |
+| GDPR, HIPAA, DPA, and Infosec Reviews |      —      |     ✅     |
 
 ### Deployment
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
+| Feature       | Open Source |          Enterprise           |
+| ------------- | :---------: | :---------------------------: |
 | Hosting Types | Self-hosted | Cloud, Hybrid, or Self-Hosted |
-| Support Type | Community | Dedicated Engineer |
+| Support Type  |  Community  |      Dedicated Engineer       |
 
 ### Implementation Engineering Program
 
-| Feature | Open Source | Enterprise |
-|---------|:-----------:|:----------:|
-| Dedicated Architect and Solutions Engineer | — | ✅ |
-| 1:1 Office Hours and Trainings | — | ✅ |
-| Structured Pilot | — | ✅ |
+| Feature                                    | Open Source | Enterprise |
+| ------------------------------------------ | :---------: | :--------: |
+| Dedicated Architect and Solutions Engineer |      —      |     ✅     |
+| 1:1 Office Hours and Trainings             |      —      |     ✅     |
+| Structured Pilot                           |      —      |     ✅     |
 
 </div>
 
