--- a/agents-docs/content/docs/typescript-sdk/spans.mdx
+++ b/agents-docs/content/docs/typescript-sdk/spans.mdx
@@ -1,6 +1,7 @@
 ---
 title: Spans and Traces
 description: OpenTelemetry spans for distributed tracing and observability in the Inkeep Agent Framework
+icon: "LuBug"
 ---
 
 ## Overview
@@ -12,8 +13,8 @@ The Inkeep Agent Framework uses OpenTelemetry for distributed tracing and observ
 ### 1. Import Required Dependencies
 
 ```typescript
-import { SpanStatusCode, type Span } from '@opentelemetry/api';
-import { getGlobalTracer, createSpanName } from '../tracer';
+import { SpanStatusCode, type Span } from "@opentelemetry/api";
+import { getGlobalTracer, createSpanName } from "../tracer";
 ```
 
 ### 2. Get the Global Tracer
@@ -27,32 +28,36 @@ const tracer = getGlobalTracer();
 
 ```typescript
 // Use the createSpanName utility for consistent naming to prefix all spans with service name
-const spanName = createSpanName('context.resolve');
+const spanName = createSpanName("context.resolve");
 // Results in: "inkeep-chat.context.resolve"
 ```
 
 ## Creating and Using Spans
 
 ```typescript
-return tracer.startActiveSpan(createSpanName('context.resolve'), {
-  attributes: {
-    'context.config_id': contextConfig.id,
-    'context.trigger_event': options.triggerEvent,
+return tracer.startActiveSpan(
+  createSpanName("context.resolve"),
+  {
+    attributes: {
+      "context.config_id": contextConfig.id,
+      "context.trigger_event": options.triggerEvent,
+    },
   },
-}, async (span: Span) => {
-  try {
-    // Your operation logic here
-    return result;
-  } catch (error) {
-    // Error handling
-    span.recordException(error as Error);
-    span.setStatus({
-      code: SpanStatusCode.ERROR,
-      message: error.message,
-    });
-    throw error;
-  } 
-});
+  async (span: Span) => {
+    try {
+      // Your operation logic here
+      return result;
+    } catch (error) {
+      // Error handling
+      span.recordException(error as Error);
+      span.setStatus({
+        code: SpanStatusCode.ERROR,
+        message: error.message,
+      });
+      throw error;
+    }
+  }
+);
 ```
 
 ## Setting Span Attributes
@@ -61,8 +66,8 @@ return tracer.startActiveSpan(createSpanName('context.resolve'), {
 
 ```typescript
 span.setAttributes({
-  'user.id': userId,
-  'request.method': 'POST',
+  "user.id": userId,
+  "request.method": "POST",
 });
 ```
 
@@ -72,7 +77,7 @@ span.setAttributes({
 
 ```typescript
 // Add events for significant operations
-span.addEvent('context.fetch_started', {
+span.addEvent("context.fetch_started", {
   definitionId: definition.id,
   url: definition.fetchConfig.url,
 });
@@ -81,9 +86,9 @@ span.addEvent('context.fetch_started', {
 ### Error Events
 
 ```typescript
-span.addEvent('error.validation_failed', {
+span.addEvent("error.validation_failed", {
   definitionId: definition.id,
-  error_type: 'json_schema_validation',
+  error_type: "json_schema_validation",
   error_details: errorMessage,
 });
 ```
@@ -96,17 +101,17 @@ span.addEvent('error.validation_failed', {
 try {
   // Your operation
 } catch (error) {
-  const errorMessage = error instanceof Error ? error.message : 'Unknown error';
-  
+  const errorMessage = error instanceof Error ? error.message : "Unknown error";
+
   // Record the exception
   span.recordException(error as Error);
-  
+
   // Set error status
   span.setStatus({
     code: SpanStatusCode.ERROR,
     message: errorMessage,
   });
-  
+
   throw error;
 }
 ```
@@ -115,24 +120,22 @@ try {
 
 ### 1. Consistent Naming Convention
 
-The span naming convention follows a hierarchical structure that mirrors your code organization. 
+The span naming convention follows a hierarchical structure that mirrors your code organization.
 
 ```typescript
 // Format: createSpanName('class.function')
 // Results in: "inkeep-chat.class.function"
 
 // Agent operations
-createSpanName('agent.generate')           // inkeep-chat.agent.generate
-createSpanName('agent.tool_execute')       // inkeep-chat.agent.tool_execute
-createSpanName('agent.transfer')            // inkeep-chat.agent.transfer
+createSpanName("agent.generate"); // inkeep-chat.agent.generate
+createSpanName("agent.tool_execute"); // inkeep-chat.agent.tool_execute
+createSpanName("agent.transfer"); // inkeep-chat.agent.transfer
 
 // Context operations
-createSpanName('context.resolve')          // inkeep-chat.context.resolve
-createSpanName('context.fetch')            // inkeep-chat.context.fetch
-
+createSpanName("context.resolve"); // inkeep-chat.context.resolve
+createSpanName("context.fetch"); // inkeep-chat.context.fetch
 
 // Tool operations
-
 ```
 
 #### Naming Rules
@@ -140,8 +143,7 @@ createSpanName('context.fetch')            // inkeep-chat.context.fetch
 1. **Class First**: Start with the class/module name (e.g., `agent`, `context`, `tool`)
 2. **Function Second**: Follow with the specific function/method (e.g., `generate`, `resolve`)
 3. **Use Underscores**: For multi-word functions, use underscores (e.g., `tool_execute`, `cache_lookup`)
-5. **Consistent Casing**: Use lowercase with underscores for consistency
-
+4. **Consistent Casing**: Use lowercase with underscores for consistency
 
 ## Configuration and Setup
 
@@ -158,24 +160,29 @@ OTEL_SERVICE_VERSION=1.0.0
 
 The framework automatically sets up OpenTelemetry instrumentation in `src/instrumentation.ts`:
 
-
 ## Examples in the Codebase
 
 ### Agent Operations
+
 See `src/agents/Agent.ts` for span usage in agent generation and tool execution.
 
 **Example from Agent.ts:**
+
 ```typescript
 // Class: Agent
 // Function: generate
-return tracer.startActiveSpan(createSpanName('agent.generate'), {
-  attributes: {
-    'agent.id': this.id,
-    'agent.name': this.name,
+return tracer.startActiveSpan(
+  createSpanName("agent.generate"),
+  {
+    attributes: {
+      "agent.id": this.id,
+      "agent.name": this.name,
+    },
   },
-}, async (span: Span) => {
-  // ... implementation
-});
+  async (span: Span) => {
+    // ... implementation
+  }
+);
 ```
 
 ## Summary
