--- a/agents-docs/content/docs/visual-builder/credentials.mdx
+++ b/agents-docs/content/docs/visual-builder/credentials.mdx
@@ -1,6 +1,7 @@
 ---
 title: Credentials
 description: Credentials are used to authenticate MCP servers.
+icon: "LuKey"
 ---
 
 The credentials page allows you to add credentials to your MCP servers.
