--- a/agents-docs/content/docs/visual-builder/data-components.mdx
+++ b/agents-docs/content/docs/visual-builder/data-components.mdx
@@ -1,6 +1,7 @@
 ---
 title: Data Components
 description: Data components are used to add data to the graph.
+icon: "LuLayoutTemplate"
 ---
 
 <Snippet file="multi-agent-framework/what-are-data-components.mdx" />
